# ai-agent

./: LICENSE  README.md  pyproject.toml  ruff.toml
docs/: project_structure.md
src/: main.py
src/config/: __init__.py  routes.py  settings.py
src/routers/: __init__.py  chat.py
src/schemas/: chat.py
src/services/: chat_service.py
