[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.121.1",
    "langchain==1.0.7",
    "langchain-openai==1.0.3",
    "pydantic==2.12.4",
    "pydantic-extra-types==2.10.6",
    "pydantic-settings==2.12.0",
    "ruff>=0.14.5",
    "uvicorn==0.38.0",
]
